--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,35 @@
 spring.application.name=movieverse
+
+spring.datasource.url=jdbc:mysql://localhost:3306/movieverse
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+
+spring.session.jdbc.initialize-schema=always
+spring.session.store-type=jdbc
+
+
+# HikariCP ???????????
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.pool-name=HikariPool-MovieVerse
+spring.datasource.hikari.auto-commit=false
+spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
+
+# ????
+spring.transaction.default-timeout=30
+spring.transaction.rollback-on-commit-failure=true
+
+# JWT ??
+jwt.secret=2N7MxEo4nSmjiXMy6i3rlrtQdNx1Fj374i/yvQUdOZY=  # ?????????
+jwt.expiration=8640000000      # Token ????100???????
+jwt.prefix=Bearer            # Token ??
+jwt.header=Authorization      # ?????
